# skully

./: .gitignore  ChangeLog.md  LICENSE  README.md  flake.nix  package.yaml  shell.nix  skully.cabal
app/: Main.hs
examples/reverseLines/: Main.hs
examples/uppercase/: Main.hs
examples/uuid4/: Main.hs
src/: ByteSocket.hs  CharSocket.hs  SK.hs  Skully.hs
src/Skully/: Base.hs  CharSocket.hs  Placeholders.hs  Stdlib.hs  Type.hs
src/Skully/Internal/: CharSocket.hs  Type.hs  TypeRep.hs
src/Skully/Stdlib/: Combinators.hs  Containers.hs
src/Skully/Stdlib/Containers/: List.hs  Pair.hs
test/: Helpers.hs  Spec.hs  TestHelpers.hs  TestSK.hs  TestSkully.hs  TestSkullyBase.hs
test/TestSkully/: Base.hs  Internal.hs  Stdlib.hs
test/TestSkully/Internal/: TypeRep.hs
test/TestSkully/Stdlib/: Combinators.hs  Containers.hs
test/TestSkully/Stdlib/Containers/: List.hs  Pair.hs
