cabal-version: 1.12

name:           skully
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/jali-clarke/skully#readme>
homepage:       https://github.com/jali-clarke/skully#readme
bug-reports:    https://github.com/jali-clarke/skully/issues
author:         Jinnah Ali-Clarke
maintainer:     jinnah.ali-clarke@outlook.com
copyright:      2020 Jinnah Ali-Clarke
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/jali-clarke/skully

library
  exposed-modules:
      Skully.Base
      Skully.Internal.CharSocket
      Skully.Internal.Type
      Skully.Internal.TypeRep
      Skully.Stdlib
      Skully.Stdlib.Combinators
      Skully.Stdlib.Containers
      Skully.Stdlib.Containers.List
      Skully.Stdlib.Containers.Pair
  hs-source-dirs:
      src
  ghc-options: -Wall -Werror
  build-depends:
      base >=4.7 && <5
    , containers ==0.6.2.1
  default-language: Haskell2010

executable reverseLines
  main-is: Main.hs
  hs-source-dirs:
      examples/reverseLines
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  build-depends:
      base >=4.7 && <5
    , containers ==0.6.2.1
    , skully
  default-language: Haskell2010

executable uppercase
  main-is: Main.hs
  hs-source-dirs:
      examples/uppercase
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  build-depends:
      base >=4.7 && <5
    , containers ==0.6.2.1
    , skully
  default-language: Haskell2010

executable uuid4
  main-is: Main.hs
  hs-source-dirs:
      examples/uuid4
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  build-depends:
      base >=4.7 && <5
    , containers ==0.6.2.1
    , skully
  default-language: Haskell2010

test-suite skully-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Helpers
      TestSkully.Base
      TestSkully.Internal
      TestSkully.Internal.TypeRep
      TestSkully.Stdlib
      TestSkully.Stdlib.Combinators
      TestSkully.Stdlib.Containers
      TestSkully.Stdlib.Containers.List
      TestSkully.Stdlib.Containers.Pair
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  build-depends:
      base >=4.7 && <5
    , containers ==0.6.2.1
    , hspec ==2.7.1
    , mtl ==2.2.2
    , skully
  default-language: Haskell2010
